fix: try to fix gesture on ios

--- a/src/components/InputFileButton/InputFileButton.module.scss
+++ b/src/components/InputFileButton/InputFileButton.module.scss
@@ -1,27 +1,11 @@
-.label {
-  cursor: pointer;
-  display: inline-block;
-  white-space: nowrap;
-  user-select: none;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 1;
-  color: white;
-  background-color: blue;
-  border: 1px solid blue;
-  border-radius: 5px;
-  padding: 10px 20px;
-  margin: 0;
-  min-width: 105px;
-  transition: all 0.2s ease-in-out;
-
-  &:hover {
-    background-color: #0000cd;
-    border-color: #0000cd;
-  }
+.button {
+  position: relative;
 }
 
 .input {
+  position: absolute;
+  top: 0;
+  left: 0;
   visibility: hidden;
   width: 0;
   height: 0;
