--- a/src/pages/EmulatorPage/EmulatorPage.module.scss
+++ b/src/pages/EmulatorPage/EmulatorPage.module.scss
@@ -41,3 +41,8 @@
   margin-bottom: 20px;
   gap: 15px;
 }
+
+.inputWrapper {
+  max-width: 150px;
+  overflow: hidden;
+}
